[gd_scene load_steps=8 format=3 uid="uid://crnf0w0s44hxx"]

[ext_resource type="Texture2D" uid="uid://bh5qft2w2580j" path="res://addons/scene_manager/icons/FileDialog.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://bd6ob6pgam1gt" path="res://addons/scene_manager/icons/Collapse.svg" id="4_vqnpn"]
[ext_resource type="Texture2D" uid="uid://ceksw4v7wfgdq" path="res://addons/scene_manager/icons/Reload.svg" id="5_2r30m"]
[ext_resource type="PackedScene" uid="uid://bur1hh1ahy063" path="res://addons/scene_manager/editor/save_button.tscn" id="5_efl6f"]
[ext_resource type="Script" uid="uid://bp7a48n3n7idd" path="res://addons/scene_manager/editor/main_panel.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://lx7kbuk7ui2m" path="res://addons/scene_manager/editor/auto_save_button.tscn" id="6_efl6f"]
[ext_resource type="Texture2D" uid="uid://bu5cjmgtiiwfp" path="res://addons/scene_manager/icons/GuiCheckedDisabled.svg" id="7_r2ecj"]

[node name="root_container" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")

[node name="main_container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="scenes" type="ScrollContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="section_tab_container" type="TabContainer" parent="main_container/scenes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
drag_to_rearrange_enabled = true

[node name="add_category_container" type="MarginContainer" parent="main_container"]
layout_mode = 2
size_flags_vertical = 8

[node name="add_category_container" type="HBoxContainer" parent="main_container/add_category_container"]
layout_mode = 2

[node name="section_name_to_add" type="LineEdit" parent="main_container/add_category_container/add_category_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="add_section_button" type="Button" parent="main_container/add_category_container/add_category_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "+ Section"

[node name="separator" type="HSeparator" parent="main_container"]
layout_mode = 2

[node name="include_list_scroll" type="VBoxContainer" parent="main_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="container" type="VBoxContainer" parent="main_container/include_list_scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="_title" type="HBoxContainer" parent="main_container/include_list_scroll/container"]
layout_mode = 2

[node name="padding" type="Control" parent="main_container/include_list_scroll/container/_title"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="scenes" type="Label" parent="main_container/include_list_scroll/container/_title"]
layout_mode = 2
text = "Includes:"

[node name="includes" type="ScrollContainer" parent="main_container/include_list_scroll/container"]
layout_mode = 2
size_flags_vertical = 3

[node name="include_list" type="VBoxContainer" parent="main_container/include_list_scroll/container/includes"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="include_add_panel" type="VBoxContainer" parent="main_container/include_list_scroll"]
unique_name_in_owner = true
layout_mode = 2

[node name="include_interactive_section_container" type="MarginContainer" parent="main_container/include_list_scroll/include_add_panel"]
layout_mode = 2
size_flags_vertical = 8

[node name="add_include_container" type="HBoxContainer" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container"]
layout_mode = 2

[node name="dialog_add_include_container" type="HBoxContainer" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="file_dialog" type="FileDialog" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
unique_name_in_owner = true
title = "Open a File or Directory"
size = Vector2i(348, 180)
ok_button_text = "Open"
file_mode = 3
filters = PackedStringArray("*.tscn")

[node name="file_dialog_button" type="Button" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
icon = ExtResource("3")

[node name="address_edit" type="LineEdit" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="dialog_add_include_container2" type="HBoxContainer" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="add_include_button" type="Button" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Adds folder/file to include in the scene data."
disabled = true
text = "Add"

[node name="hide_include_button" type="Button" parent="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
tooltip_text = "Shows/hides the include section."
focus_mode = 0
icon = ExtResource("4_vqnpn")
icon_alignment = 1
metadata/enabled = true

[node name="separator" type="HSeparator" parent="main_container/include_list_scroll/include_add_panel"]
layout_mode = 2

[node name="interactive_section_container" type="VBoxContainer" parent="main_container"]
layout_mode = 2

[node name="margin_refresh_save_container" type="MarginContainer" parent="main_container/interactive_section_container"]
layout_mode = 2
size_flags_vertical = 0

[node name="refresh_save_container" type="VBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container"]
layout_mode = 2

[node name="save_refresh_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="refresh_button" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Reloads the scene data file and refreshes the UI."
text = "Refresh"
icon = ExtResource("5_2r30m")

[node name="save_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="save_button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container" instance=ExtResource("5_efl6f")]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="unhide_include_button" type="Button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_vqnpn")
metadata/enabled = true

[node name="auto_save_refresh_container" type="HBoxContainer" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="padding" type="Control" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="auto_save_button" parent="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/auto_save_refresh_container" instance=ExtResource("6_efl6f")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("7_r2ecj")

[node name="garbage_bin" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="RefreshDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="SaveDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="tab_changed" from="main_container/scenes/section_tab_container" to="." method="_on_section_tab_changed"]
[connection signal="text_changed" from="main_container/add_category_container/add_category_container/section_name_to_add" to="." method="_on_section_name_text_changed"]
[connection signal="button_up" from="main_container/add_category_container/add_category_container/add_section_button" to="." method="_on_add_section_button_up"]
[connection signal="dir_selected" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="file_selected" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog" to="." method="_on_file_dialog_dir_file_selected"]
[connection signal="button_up" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/file_dialog_button" to="." method="_on_file_dialog_button_button_up"]
[connection signal="text_changed" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container/address_edit" to="." method="_on_address_text_changed"]
[connection signal="button_up" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2/add_include_button" to="." method="_on_add_include_button_button_up"]
[connection signal="button_up" from="main_container/include_list_scroll/include_add_panel/include_interactive_section_container/add_include_container/dialog_add_include_container2/hide_include_button" to="." method="_on_hide_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/refresh_button" to="." method="_on_refresh_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container/save_button" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="main_container/interactive_section_container/margin_refresh_save_container/refresh_save_container/save_refresh_container/save_container/unhide_include_button" to="." method="_on_hide_button_up"]
[connection signal="timeout" from="RefreshDelayTimer" to="." method="_on_refresh_delay_timer_timeout"]
[connection signal="timeout" from="SaveDelayTimer" to="." method="_on_save_delay_timer_timeout"]
